Bug fix, adjusted spacing in form box

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ main {
 }
 
 .main-title {
-  font-size: 1.4em;
+  font-size: 1.3em;
   margin: 20px 0px 10px 18px;
   color: #CBC9CF;
 }
@@ -57,12 +57,13 @@ form {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   border-radius: 3px;
-  height: 75%;
+  height: 60%;
 }
 
 form > * {
-  margin: 35px;
+  margin: 20px;
 }
 
  h2 {
@@ -90,7 +91,7 @@ form > * {
    flex-basis: 30%;
    border-radius: 3px;
    border: 2px solid;
-   padding: 10px 30px;
+   padding: 5px 30px;
 }
 
 .category-icon {
@@ -102,6 +103,7 @@ form > * {
 .button-title {
   align-self: center;
   margin-top: 3px;
+  font-size: .8em;
 }
 
 .study-box:checked + label {
